# PolyTraj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  main_page.md
examples/: CMakeLists.txt  generate_path.cpp  generate_trajectory.cpp  main.cpp  path_demo.cpp
include/: polytraj.h
lib/: CMakeLists.txt
lib/src/: params.cpp  path.h  polynomial.cpp  shoot.h  trajectory.h
src/: CMakeLists.txt  params.cpp  params.h  path.cpp  path.h  polynomial.cpp  polynomial.h  shoot.h  trajectory.cpp  trajectory.h
test/: CMakeLists.txt  unittest.cpp
